--- a/notes.ipynb
+++ b/notes.ipynb
@@ -6,7 +6,7 @@
       "name": "notes.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOo9itdrK2q++XL/MKoNdfI",
+      "authorship_tag": "ABX9TyMynlbGqKnqswP1f71r+I5H",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -164,6 +164,21 @@
         "raw = parser.from_file('The Social Animal - elliot aronson.pdf')\n",
         "print(raw['content'])"
       ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import scipy.stats as st\n",
+        "\n",
+        "st.pearsonr(data[], data[])\n",
+        "sns.pairplot(data)\n",
+        "data.corr()"
+      ],
+      "metadata": {
+        "id": "iQe9gUXBzbKS"
+      },
       "execution_count": null,
       "outputs": []
     }
