--- a/practice_jobs_summary.ipynb
+++ b/practice_jobs_summary.ipynb
@@ -6,7 +6,7 @@
       "name": "practice-jobs summary.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNT2/4NNZB8d0pYM1gAZhU+",
+      "authorship_tag": "ABX9TyMbfIBQ6UsKTYC3ue0r815g",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "source": [
+        "#import report of jobs\n",
+        "#clean and transform"
+      ],
+      "metadata": {
+        "id": "_Lg7BrhGtM-P"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "x8CfWifyE72t"
       },
@@ -57,7 +69,7 @@
       "metadata": {
         "id": "OKjmeeQ5R5SD"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -71,7 +83,7 @@
       "metadata": {
         "id": "BBDt0kaJR5fb"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -99,7 +111,7 @@
         },
         "outputId": "69503af9-5104-42cc-e8b5-cf005a382d51"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -137,7 +149,7 @@
       "metadata": {
         "id": "yRtPppqAPkkl"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -153,7 +165,7 @@
       "metadata": {
         "id": "fcAXyIM3PkjC"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -171,7 +183,7 @@
         },
         "outputId": "14093b6f-59ec-49cf-f560-28008591db2a"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -406,7 +418,7 @@
       "metadata": {
         "id": "6y5kWypwHkr7"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -419,69 +431,57 @@
         "\n",
         "tempCol = df['days open category']\n",
         "df.pop('days open category')\n",
-        "df.insert(df.columns.get_loc('days open')+1, 'days open category', tempCol)\n",
-        "\n",
-        "df"
+        "df.insert(df.columns.get_loc('days open')+1, 'days open category', tempCol)"
       ],
       "metadata": {
+        "id": "0apc4CaXQ-1t"
+      },
+      "execution_count": 25,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#correct reason for hire text\n",
+        "df['reason for hire'].mask(df['reason for hire'] == 'CURR POSITION', 'recruiting > backfill', inplace=True)\n",
+        "df['reason for hire'].mask(df['reason for hire'] == 'NEW POSITION', 'recruiting > new hire', inplace=True)"
+      ],
+      "metadata": {
+        "id": "9bf0Hm0csqL0"
+      },
+      "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#average days open\n",
+        "df['days open'].sum()/ df['days open'].count()\n",
+        "\n",
+        "df.groupby('recruiter').sum()['openings'].reset_index().sort_values('openings', ascending=False)"
+      ],
+      "metadata": {
+        "id": "J3tjJH3Eqhj3",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 695
+          "height": 143
         },
-        "id": "0apc4CaXQ-1t",
-        "outputId": "37cc83ba-de33-4782-ca7f-d316d1f6bd9f"
+        "outputId": "0ecdb040-25a7-47dc-9b7f-bba1e50a115a"
       },
-      "execution_count": 20,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "   job title  openings recruiter hiring manager start date  days open  \\\n",
-              "2          c         1    alex m       mckenzie 2022-01-13        170   \n",
-              "5          f         1    alex m          adams 2022-05-19         44   \n",
-              "8          i         1    alex m        schmitt 2022-02-19        133   \n",
-              "11         l         1    alex m        schmitt 2022-04-13         80   \n",
-              "0          a         1   denny s       mckenzie 2022-02-23        129   \n",
-              "3          d         1   denny s        kennedy 2022-05-18         45   \n",
-              "6          g         1   denny s        griffin 2022-03-16        108   \n",
-              "9          j         5   denny s          adams 2022-01-25        158   \n",
-              "1          b         2  symone d       mckenzie 2022-01-16        167   \n",
-              "4          e         1  symone d        kennedy 2022-04-16         77   \n",
-              "7          h         1  symone d        schmitt 2022-05-22         41   \n",
-              "10         k         1  symone d        schmitt 2022-06-29          3   \n",
-              "\n",
-              "   days open category        reason for hire replacement for  \\\n",
-              "2                 Red  recruiting > backfill        whoever3   \n",
-              "5              Yellow  recruiting > backfill        whoever6   \n",
-              "8                 Red           NEW POSITION             NaN   \n",
-              "11                Red          CURR POSITION       whoever12   \n",
-              "0                 Red  recruiting > backfill        whoever1   \n",
-              "3              Yellow  recruiting > backfill        whoever4   \n",
-              "6                 Red          CURR POSITION       whoever11   \n",
-              "9                 Red           NEW POSITION             NaN   \n",
-              "1                 Red  recruiting > backfill        whoever2   \n",
-              "4                 Red  recruiting > backfill        whoever5   \n",
-              "7              Yellow   recruiting > newfill             NaN   \n",
-              "10              Green           NEW POSITION             NaN   \n",
-              "\n",
-              "            department business unit           division   location  \n",
-              "2           recruiting        talent  business services  remote la  \n",
-              "5               design     marketing           creative  remote la  \n",
-              "8   software developer   engineering            science  remote ny  \n",
-              "11  software developer   engineering            science  remote ny  \n",
-              "0           recruiting        talent  business services  remote la  \n",
-              "3           accounting       finance  business services  remote la  \n",
-              "6       website design     marketing           creative  remote nj  \n",
-              "9               design     marketing           creative  remote ny  \n",
-              "1           recruiting        talent  business services  remote la  \n",
-              "4           accounting       finance  business services  remote la  \n",
-              "7   software developer   engineering            science  remote nj  \n",
-              "10  software developer   engineering            science  remote ny  "
+              "  recruiter  openings\n",
+              "1   denny s         8\n",
+              "2  symone d         5\n",
+              "0    alex m         4"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-45301d0b-eeda-4d5d-9f47-c48468c9449b\">\n",
+              "  <div id=\"df-860f2afe-a47f-4495-93d5-978e7b28ed82\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -501,218 +501,30 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
-              "      <th>job title</th>\n",
-              "      <th>openings</th>\n",
               "      <th>recruiter</th>\n",
-              "      <th>hiring manager</th>\n",
-              "      <th>start date</th>\n",
-              "      <th>days open</th>\n",
-              "      <th>days open category</th>\n",
-              "      <th>reason for hire</th>\n",
-              "      <th>replacement for</th>\n",
-              "      <th>department</th>\n",
-              "      <th>business unit</th>\n",
-              "      <th>division</th>\n",
-              "      <th>location</th>\n",
+              "      <th>openings</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>denny s</td>\n",
+              "      <td>8</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>c</td>\n",
-              "      <td>1</td>\n",
-              "      <td>alex m</td>\n",
-              "      <td>mckenzie</td>\n",
-              "      <td>2022-01-13</td>\n",
-              "      <td>170</td>\n",
-              "      <td>Red</td>\n",
-              "      <td>recruiting &gt; backfill</td>\n",
-              "      <td>whoever3</td>\n",
-              "      <td>recruiting</td>\n",
-              "      <td>talent</td>\n",
-              "      <td>business services</td>\n",
-              "      <td>remote la</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>5</th>\n",
-              "      <td>f</td>\n",
-              "      <td>1</td>\n",
-              "      <td>alex m</td>\n",
-              "      <td>adams</td>\n",
-              "      <td>2022-05-19</td>\n",
-              "      <td>44</td>\n",
-              "      <td>Yellow</td>\n",
-              "      <td>recruiting &gt; backfill</td>\n",
-              "      <td>whoever6</td>\n",
-              "      <td>design</td>\n",
-              "      <td>marketing</td>\n",
-              "      <td>creative</td>\n",
-              "      <td>remote la</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>8</th>\n",
-              "      <td>i</td>\n",
-              "      <td>1</td>\n",
-              "      <td>alex m</td>\n",
-              "      <td>schmitt</td>\n",
-              "      <td>2022-02-19</td>\n",
-              "      <td>133</td>\n",
-              "      <td>Red</td>\n",
-              "      <td>NEW POSITION</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>software developer</td>\n",
-              "      <td>engineering</td>\n",
-              "      <td>science</td>\n",
-              "      <td>remote ny</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>11</th>\n",
-              "      <td>l</td>\n",
-              "      <td>1</td>\n",
-              "      <td>alex m</td>\n",
-              "      <td>schmitt</td>\n",
-              "      <td>2022-04-13</td>\n",
-              "      <td>80</td>\n",
-              "      <td>Red</td>\n",
-              "      <td>CURR POSITION</td>\n",
-              "      <td>whoever12</td>\n",
-              "      <td>software developer</td>\n",
-              "      <td>engineering</td>\n",
-              "      <td>science</td>\n",
-              "      <td>remote ny</td>\n",
+              "      <td>symone d</td>\n",
+              "      <td>5</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>a</td>\n",
-              "      <td>1</td>\n",
-              "      <td>denny s</td>\n",
-              "      <td>mckenzie</td>\n",
-              "      <td>2022-02-23</td>\n",
-              "      <td>129</td>\n",
-              "      <td>Red</td>\n",
-              "      <td>recruiting &gt; backfill</td>\n",
-              "      <td>whoever1</td>\n",
-              "      <td>recruiting</td>\n",
-              "      <td>talent</td>\n",
-              "      <td>business services</td>\n",
-              "      <td>remote la</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>d</td>\n",
-              "      <td>1</td>\n",
-              "      <td>denny s</td>\n",
-              "      <td>kennedy</td>\n",
-              "      <td>2022-05-18</td>\n",
-              "      <td>45</td>\n",
-              "      <td>Yellow</td>\n",
-              "      <td>recruiting &gt; backfill</td>\n",
-              "      <td>whoever4</td>\n",
-              "      <td>accounting</td>\n",
-              "      <td>finance</td>\n",
-              "      <td>business services</td>\n",
-              "      <td>remote la</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>6</th>\n",
-              "      <td>g</td>\n",
-              "      <td>1</td>\n",
-              "      <td>denny s</td>\n",
-              "      <td>griffin</td>\n",
-              "      <td>2022-03-16</td>\n",
-              "      <td>108</td>\n",
-              "      <td>Red</td>\n",
-              "      <td>CURR POSITION</td>\n",
-              "      <td>whoever11</td>\n",
-              "      <td>website design</td>\n",
-              "      <td>marketing</td>\n",
-              "      <td>creative</td>\n",
-              "      <td>remote nj</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>9</th>\n",
-              "      <td>j</td>\n",
-              "      <td>5</td>\n",
-              "      <td>denny s</td>\n",
-              "      <td>adams</td>\n",
-              "      <td>2022-01-25</td>\n",
-              "      <td>158</td>\n",
-              "      <td>Red</td>\n",
-              "      <td>NEW POSITION</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>design</td>\n",
-              "      <td>marketing</td>\n",
-              "      <td>creative</td>\n",
-              "      <td>remote ny</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>b</td>\n",
-              "      <td>2</td>\n",
-              "      <td>symone d</td>\n",
-              "      <td>mckenzie</td>\n",
-              "      <td>2022-01-16</td>\n",
-              "      <td>167</td>\n",
-              "      <td>Red</td>\n",
-              "      <td>recruiting &gt; backfill</td>\n",
-              "      <td>whoever2</td>\n",
-              "      <td>recruiting</td>\n",
-              "      <td>talent</td>\n",
-              "      <td>business services</td>\n",
-              "      <td>remote la</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>e</td>\n",
-              "      <td>1</td>\n",
-              "      <td>symone d</td>\n",
-              "      <td>kennedy</td>\n",
-              "      <td>2022-04-16</td>\n",
-              "      <td>77</td>\n",
-              "      <td>Red</td>\n",
-              "      <td>recruiting &gt; backfill</td>\n",
-              "      <td>whoever5</td>\n",
-              "      <td>accounting</td>\n",
-              "      <td>finance</td>\n",
-              "      <td>business services</td>\n",
-              "      <td>remote la</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>7</th>\n",
-              "      <td>h</td>\n",
-              "      <td>1</td>\n",
-              "      <td>symone d</td>\n",
-              "      <td>schmitt</td>\n",
-              "      <td>2022-05-22</td>\n",
-              "      <td>41</td>\n",
-              "      <td>Yellow</td>\n",
-              "      <td>recruiting &gt; newfill</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>software developer</td>\n",
-              "      <td>engineering</td>\n",
-              "      <td>science</td>\n",
-              "      <td>remote nj</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>10</th>\n",
-              "      <td>k</td>\n",
-              "      <td>1</td>\n",
-              "      <td>symone d</td>\n",
-              "      <td>schmitt</td>\n",
-              "      <td>2022-06-29</td>\n",
-              "      <td>3</td>\n",
-              "      <td>Green</td>\n",
-              "      <td>NEW POSITION</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>software developer</td>\n",
-              "      <td>engineering</td>\n",
-              "      <td>science</td>\n",
-              "      <td>remote ny</td>\n",
+              "      <td>alex m</td>\n",
+              "      <td>4</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-45301d0b-eeda-4d5d-9f47-c48468c9449b')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-860f2afe-a47f-4495-93d5-978e7b28ed82')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -763,12 +575,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-45301d0b-eeda-4d5d-9f47-c48468c9449b button.colab-df-convert');\n",
+              "          document.querySelector('#df-860f2afe-a47f-4495-93d5-978e7b28ed82 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-45301d0b-eeda-4d5d-9f47-c48468c9449b');\n",
+              "          const element = document.querySelector('#df-860f2afe-a47f-4495-93d5-978e7b28ed82');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -791,21 +603,9 @@
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 55
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#average days open\n",
-        "df['days open'].sum()/ df['days open'].count()\n"
-      ],
-      "metadata": {
-        "id": "J3tjJH3Eqhj3"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
